# Server/org/apps/auth-service/src/routes/auth.router.ts
@@ -1,14 +1,15 @@
 import express,{ Router } from 'express';
-import {resetUserPassword, userForgotPassword, userLogin, userRegistration, userVerifyForgotpasswordOtp, verifyUser } from '../controllers/auth_controller';
+import {resetUserPassword, userForgotPassword, userLogin, userLogout, userRegistration, userVerifyForgotpasswordOtp, verifyUser } from '../controllers/auth_controller';
 
 const router: Router = express.Router();
 
 router.post('/register', userRegistration);
 router.post('/verify', verifyUser);
 router.post(`/login` , userLogin);
-router.post(`/forgot-password-user`, userForgotPassword);
-router.post(`/verify-forgot-password-otp-user`, userVerifyForgotpasswordOtp);
-router.post(`/reset-password-user`, resetUserPassword);
+router.post('/logout', userLogout);
+router.post(`/forgot-password`, userForgotPassword);
+router.post(`/verify-forgot-password-otp`, userVerifyForgotpasswordOtp);
+router.post(`/reset-password`, resetUserPassword);
 
 
 export default router;
